[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.4" }
serde =  { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
