[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.4" }
serde =  { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "any", "postgres", "uuid", "migrate", "macros", "chrono", "json"] }
async-trait = "0.1.77"
pretty_env_logger = "0.5.0"
log = "0.4.21"
dotenv = "0.15.0"
